# swimming-analysis

./: .gitignore  Are you swimming harder or smarter_.twbx  README.md  graph.py  merged_laps.csv  parser.py  prepare_100_stile.py  pyproject.toml  requirements.txt  setup.py
analisi_nuoto/: __init__.py  __main__.py  cli.py  config.py  dashboard.py  datasets.py  ingestion.py  naming.py  orchestrator.py  time_utils.py  visualization.py
data/: 100stile.csv
data/input/: activity_20584599774.csv  activity_20703880312.csv  activity_20896882655.csv  activity_20964911769.csv  activity_21093720769.csv  activity_21155856247.csv  activity_21217798483.csv  activity_21278726321.csv  activity_21338113438.csv  activity_21604979588.csv  activity_22211718814.csv  activity_22234851951.csv  activity_22462220610.csv  activity_22591687538.csv  activity_22888699241.csv  activity_23054288152.csv  activity_23136857346.csv  activity_23302772273.csv  activity_23327783116.csv  activity_23383198067.csv
data/processed/: 100_dorso.csv  100_stile.csv  200_stile.csv  25_rana.csv  50_dorso.csv  50_rana.csv  50_stile.csv  75_stile.csv  merged_laps.csv
data/singoli lap/: activity_20623398286.csv  activity_20643588788.csv  activity_21030773676.csv  activity_21648439085.csv  activity_21687769191.csv  activity_21759007635.csv  activity_21832163880.csv  activity_21924796837.csv  activity_21977885733.csv  activity_22055589786.csv  activity_22313679826.csv  activity_22531752745.csv  activity_22805238416.csv
